# seline

./: .commitmsg  .env.example  .gitignore  .watchignore  BRANCH_COMPARISON.md  CHARACTER_PROMPT_CACHING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ISSUES_TRACKER.md  LICENSE  PLUGIN_SYSTEM_NEXT_STEPS.md  PR_SUMMARY.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_0.2.6.md  RELEASE_NOTES_v0.1.7.md  RELEASE_NOTES_v0.1.8.md  SKILLS_V1_DESIGN_PLAN.md  SKILLS_V2_PHASE2_PLAN.md  SUBAGENT_SYSTEM_INSTRUCTIONS.md  THANKS.md  app_info.html  electron-builder.yml  esbuild.electron.mjs  instrumentation.ts  mac-build-helper-window-7b466c47.md  middleware.ts  next.config.ts  package-lock.json  package.json  plan.md  pnpm-lock.yaml  proxy.ts  release0.2.0.md  sample-test.md  tailwind.config.ts  task-scheduler-phase3-4.md  task.scheduler.md  teknoseyir_comment_strategy.md  test-skill.md  tsconfig.app.json  (+6 more)
comfyui_backend/deeployd-comfy/: .gitignore  .markdownlint.json  .pre-commit-config.yaml  Makefile  README.md  comfyui.json  dev-up.sh  dev_track.md  main.py  package.json  pyproject.toml  pytest.ini  requirements-api.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  workflow_api.json  workflow_ui.json
comfyui_backend/deeployd-comfy/.github/workflows/: ci.yml
comfyui_backend/deeployd-comfy/docker/api/: Dockerfile
comfyui_backend/deeployd-comfy/docker/nginx/: nginx.conf
comfyui_backend/deeployd-comfy/docs/: AGENTS.md  FRONTEND_IMPLEMENTATION_GUIDE.md  README-moved.md  RESEARCH_REPORT_GETNODE_SETNODE.md  RESEARCH_REPORT_NUNCHAKU_INTEGRATION.md  dev_instructions.md  dev_track.md  development.md  research.md
comfyui_backend/deeployd-comfy/docs/examples/: basic.ai.json  workflow-flux-lora-upscaler-Mk8Yz49ROXjkQObezVMp-beaver_absolute_68-openart.ai.json
comfyui_backend/deeployd-comfy/frontend/: README.md  next.config.ts  package.json
comfyui_backend/deeployd-comfy/src/: __init__.py
comfyui_backend/deeployd-comfy/src/api/: __init__.py  app.py  event_bus.py  exceptions.py  generator.py  openapi_generator.py  resource_monitor.py  task_executor.py  task_queue.py  validators.py  websocket_manager.py  worker_main.py  worker_service.py  workflow_api.py  workflow_executor.py
comfyui_backend/deeployd-comfy/src/containers/: __init__.py  accelerator_manager.py  build_optimizer.py  custom_node_installer.py  docker_manager.py  dockerfile_builder.py  model_manager.py  registry_manager.py  rgthree_reroute_fix.py
comfyui_backend/deeployd-comfy/src/db/: __init__.py  database.py  models.py  repositories.py
comfyui_backend/deeployd-comfy/src/utils/: version_check.py
comfyui_backend/deeployd-comfy/src/workflows/: __init__.py  analyzer.py  constants.py  converter.py  dependencies.py  known_node_mappings.json  node_bridge.js  node_resolver.py  parser.py  validator.py  version.py  workflow_preprocessor.py
comfyui_backend/deeployd-comfy/tests/: real_workflow.json  test_smoke.py  test_workflow_ui.json  workflow_ui.json
comfyui_backend/deeployd-comfy/tests/integration/: test_database_real.py  test_end_to_end_workflow.py  test_queue_persistence.py  test_resource_monitoring.py  test_worker_scaling.py
comfyui_backend/deeployd-comfy/tests/unit/: test_api_app.py  test_build_optimizer.py  test_container_router_api.py  test_converter_critical.py  test_custom_node_installer.py  test_database.py  test_dependency_extractor.py  test_docker_manager.py  test_dockerfile_builder.py  test_execution_router_api.py  test_model_manager.py  test_node_analyzer.py  test_openapi_generator.py  test_python_version.py  test_real_workflow_integration.py  test_registry_manager.py  test_request_validation.py  test_task_executor.py  test_task_queue_manager.py  test_validation_middleware.py  test_websocket_manager.py  (+7 more)
(+1414 files in other folders)
